remove slider, add modal, add toggle, fix marker alignment for training day view

--- a/map-frontend/frontend-content/src/app/modal/modal.component.css
+++ b/map-frontend/frontend-content/src/app/modal/modal.component.css
@@ -5,6 +5,8 @@
     height: 100%;
     position: fixed;
     z-index: 950;
+    overflow: auto;
+    text-align:center;
 }
 
 .modal .overlay {
@@ -13,24 +15,30 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background: rgba(0,0,0,0.5);
+    /* background: rgba(0,0,0,0.5); */
     z-index: 975;
 }
 
 .modal .modal-content {
-    position: absolute;
+    position: relative;
     z-index: 999;
-    background: white;
+    /* background: white; */
+    background: rgba(0,0,0,0.85);
 }
 
 .modal button.close-modal-button {
-    top: 8px;
-    right: 8px;
+    top: 18px;
+    right: 18px;
     position: absolute;
     border: none;
+    padding: 10px 15px;
+    cursor: pointer;
 }
+
 
 .modal button.close-modal-button:hover,
 .modal button.close-modal-button:active {
-    color: grey;
+    color: white;
+    background-color: lightslategray;
+    
 }
